--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tenho uma chance?</title>
     <style>
         body {
@@ -11,23 +12,32 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
             text-align: center;
             color: #333;
         }
         .box {
             background: white;
-            padding: 20px 30px;
+            padding: 20px;
             border-radius: 15px;
             box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+            max-width: 400px;
+            width: 100%;
+        }
+        h2, p, h3 {
+            margin-bottom: 15px;
         }
         button {
-            margin: 10px;
-            padding: 10px 20px;
+            margin: 10px 0;
+            padding: 15px 30px;
             border: none;
-            border-radius: 8px;
+            border-radius: 10px;
             cursor: pointer;
             font-weight: bold;
+            font-size: 1.1em;
+            width: 100%;
             transition: 0.3s;
         }
         .yes {
@@ -39,11 +49,12 @@
             color: white;
         }
         button:hover {
-            opacity: 0.8;
+            opacity: 0.9;
         }
         #response {
             margin-top: 20px;
-            font-size: 1.2em;
+            font-size: 1.3em;
+            color: #444;
         }
     </style>
 </head>
@@ -62,7 +73,7 @@
             document.getElementById('response').innerHTML = "Agora é oficial ❤️🥳";
         }
         function respostaNao() {
-            document.getElementById('response').innerHTML = "Poxa... vou continuar tentando 😅";
+            document.getElementById('response').innerHTML = "Poxa... vou continuar tentando";
         }
     </script>
 </body>
